--- a/PopcornApp/app/src/main/res/layout/activity_login.xml
+++ b/PopcornApp/app/src/main/res/layout/activity_login.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,57 +6,62 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="50dp"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/LoginUsername"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:ems="10"
-        android:hint="Username"
-        android:inputType="text"
-        android:textColor="@color/TextColor"
-        android:nextFocusRight="@+id/LoginPassword"
-        style="@style/EditTextCubScoutTheme"/>
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/LoginSubmitButton"
-        style="@style/ButtonCubScoutTheme"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/LoginPassword"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="53dp"
-        android:onClick="Login"
-        android:text="Submit"
-        android:textColor="@color/TextColor" />
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Welcome to the Cub Scout App(test/123 or leader/123)"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/TextColor"
+            android:gravity="center_horizontal"
+            android:paddingBottom="30dp"/>
 
-    <EditText
-        android:id="@+id/LoginPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/LoginUsername"
-        android:layout_centerHorizontal="true"
-        android:ems="10"
-        android:hint="Password"
-        android:inputType="text"
-        android:password="true"
-        android:textColor="@color/TextColor"
-        android:nextFocusRight="@+id/LoginPassword"
-        style="@style/EditTextCubScoutTheme"/>
+        <EditText
+            android:id="@+id/LoginUsername"
+            style="@style/EditTextCubScoutTheme"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Username"
+            android:inputType="text"
+            android:nextFocusRight="@+id/LoginPassword"
+            android:textColor="@color/TextColor"
+            android:gravity="center_horizontal"
+            android:layout_gravity="center_horizontal" />
 
-    <TextView
-        android:id="@+id/WelcomeBanner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="71dp"
-        android:text="Welcome to the Cub Scout App(test/123 or leader/123)"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/TextColor" />
+        <EditText
+            android:id="@+id/LoginPassword"
+            style="@style/EditTextCubScoutTheme"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/LoginUsername"
+            android:hint="Password"
+            android:inputType="textPassword|text"
+            android:nextFocusRight="@+id/LoginPassword"
+            android:textColor="@color/TextColor"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
+            android:paddingTop="15dp"
+            android:ems="10"/>
 
-</RelativeLayout>
+        <Button
+            android:id="@+id/LoginSubmitButton"
+            style="@style/ButtonCubScoutTheme"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/LoginPassword"
+            android:layout_marginTop="53dp"
+            android:onClick="Login"
+            android:text="Submit"
+            android:textColor="@color/TextColor"
+            android:layout_gravity="center_horizontal" />
+
+    </LinearLayout>
+</ScrollView>
