--- a/PopcornApp/app/src/main/res/layout/activity_donation.xml
+++ b/PopcornApp/app/src/main/res/layout/activity_donation.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="@color/BGColor"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -23,6 +23,7 @@
             android:layout_gravity="center_horizontal"
             android:text="Donations"
             android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/TextColor"
             android:textSize="@dimen/abc_action_button_min_width_material" />
 
         <TableLayout
@@ -441,6 +442,7 @@
                     android:layout_gravity="bottom"
                     android:text="Donation Amount: $"
                     android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@color/TextColor"
                     android:textSize="@dimen/abc_text_size_display_1_material" />
 
                 <EditText
@@ -756,6 +758,7 @@
                     android:layout_column="0"
                     android:checked="false"
                     android:text="Credit"
+                    android:textColor="@color/TextColor"
                     android:textSize="@dimen/abc_text_size_title_material" />
             </TableRow>
 
@@ -781,6 +784,7 @@
                     android:layout_column="0"
                     android:checked="false"
                     android:text="Cash"
+                    android:textColor="@color/TextColor"
                     android:textSize="@dimen/abc_text_size_title_material" />
             </TableRow>
 
@@ -805,6 +809,7 @@
                     android:layout_height="wrap_content"
                     android:layout_column="0"
                     android:text="Check"
+                    android:textColor="@color/TextColor"
                     android:textSize="@dimen/abc_text_size_title_material" />
             </TableRow>
         </TableLayout>
@@ -821,6 +826,7 @@
                 android:layout_gravity="bottom"
                 android:clickable="true"
                 android:onClick="ScoutMain"
+                style="@style/ButtonCubScoutTheme"
                 android:text="@string/back" />
 
 
@@ -837,6 +843,7 @@
                     android:layout_row="29"
                     android:clickable="true"
                     android:onClick="CustomerInfo"
+                    style="@style/ButtonCubScoutTheme"
                     android:text="@string/next" />
             </GridLayout>
         </TableRow>
