--- a/PopcornApp/app/src/main/res/layout/activity_scout_goal.xml
+++ b/PopcornApp/app/src/main/res/layout/activity_scout_goal.xml
@@ -4,6 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@color/BGColor"
     tools:context="com.mis478.popcornapp.ScoutGoal">
 
 
@@ -23,7 +24,9 @@
                 android:text="Pack Goal:"
                 android:id="@+id/PackGoalLabel"
                 android:layout_gravity="right"
-                android:layout_marginRight="5dp" />
+                android:layout_marginRight="5dp"
+                android:textColor="@color/TextColor"
+                android:paddingLeft="15dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -32,7 +35,8 @@
                 android:text="Personal Goal:"
                 android:id="@+id/PersonalGoalLabel"
                 android:layout_gravity="right"
-                android:layout_marginRight="5dp" />
+                android:layout_marginRight="5dp" android:textColor="@color/TextColor"
+                android:paddingLeft="15dp" />
 
         </LinearLayout>
 
@@ -47,7 +51,8 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="$0"
                 android:id="@+id/PackAmt"
-                android:numeric="signed" />
+                android:numeric="signed" android:textColor="@color/TextColor"
+                android:paddingLeft="15dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -55,7 +60,8 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="$15"
                 android:id="@+id/PersonalAmt"
-                android:numeric="integer" />
+                android:numeric="integer"  android:textColor="@color/TextColor"
+                android:paddingLeft="15dp"/>
 
         </LinearLayout>
 
@@ -72,7 +78,8 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Total Sold:"
                 android:id="@+id/TotalSoldAmtLabel"
-                android:layout_gravity="center" />
+                android:layout_gravity="center" android:textColor="@color/TextColor"
+                android:paddingLeft="15dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -80,7 +87,8 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="$5"
                 android:id="@+id/TotalSoldAmt"
-                android:layout_gravity="center" />
+                android:layout_gravity="center"  android:textColor="@color/TextColor"
+                android:paddingLeft="15dp"/>
         </LinearLayout>
 
     </TableRow>
