--- a/PopcornApp/app/src/main/res/layout/activity_login.xml
+++ b/PopcornApp/app/src/main/res/layout/activity_login.xml
@@ -58,7 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/LoginPassword"
             android:layout_marginTop="53dp"
-            android:onClick="Login"
+            android:onClick="ConnectToDatabase"
             android:text="Submit"
             android:textColor="@color/TextColor"
             android:layout_gravity="center_horizontal" />
