--- a/PopcornApp/app/src/main/res/layout/activity_login.xml
+++ b/PopcornApp/app/src/main/res/layout/activity_login.xml
@@ -17,11 +17,12 @@
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Welcome to the Cub Scout App(scout/123 or leader/123)"
+            android:text="Welcome to the Cub Scout App"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/TextColor"
             android:gravity="center_horizontal"
-            android:paddingBottom="30dp"/>
+            android:paddingBottom="30dp"
+            android:id="@+id/aaaa" />
 
         <EditText
             android:id="@+id/LoginUsername"
@@ -62,6 +63,16 @@
             android:text="Submit"
             android:textColor="@color/TextColor"
             android:layout_gravity="center_horizontal" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Scout = joe/123 Den = John/111"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/TextColor"
+            android:gravity="center_horizontal"
+            android:paddingBottom="30dp"
+            android:id="@+id/textView23" />
 
     </LinearLayout>
 </ScrollView>
