--- a/PopcornApp/app/src/main/res/layout/activity_scout_main_page.xml
+++ b/PopcornApp/app/src/main/res/layout/activity_scout_main_page.xml
@@ -1,108 +1,168 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/BGColor"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.mis478.popcornapp.ScoutMainPage"
-    android:id="@+id/hello"
-    android:background="@color/BGColor">
+    tools:context="com.mis478.popcornapp.ScoutMainPage">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Welcome Scout"
-        android:id="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:textColor="@color/TextColor"
-        android:paddingLeft="15dp"/>
+        android:orientation="vertical">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Goals"
-        android:id="@+id/GoalBtn"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:onClick="Goal"
-        style="@style/ButtonCubScoutTheme"/>
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sales Mode"
-        android:id="@+id/SalesModeBtn"
-        android:layout_marginTop="293dp"
-        android:onClick="Sales"
-        style="@style/ButtonCubScoutTheme"/>
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:paddingBottom="50dp"
+                android:text="Welcome Scout"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/TextColor" />
+        </TableRow>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Donations"
-        android:id="@+id/DonateBtn"
-        android:layout_alignTop="@+id/SalesModeBtn"
-        android:layout_alignLeft="@+id/textView"
-        android:layout_alignStart="@+id/textView"
-        android:onClick="Donation"
-        style="@style/ButtonCubScoutTheme"/>
+        <TableLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="View Products"
-        android:id="@+id/ViewProductsBtn"
-        android:layout_alignBottom="@+id/DonateBtn"
-        android:layout_toRightOf="@+id/textView"
-        android:layout_toLeftOf="@+id/GoalBtn"
-        android:layout_toStartOf="@+id/GoalBtn"
-        android:onClick="View"
-        style="@style/ButtonCubScoutTheme"/>
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="10dp">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Delivery Mode"
-        android:id="@+id/DeliverBtn"
-        android:layout_below="@+id/SalesModeBtn"
-        android:layout_alignLeft="@+id/SalesModeBtn"
-        android:layout_alignStart="@+id/SalesModeBtn"
-        android:layout_marginTop="55dp"
-        android:onClick="Delivery"
-        style="@style/ButtonCubScoutTheme"/>
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".1" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Status"
-        android:id="@+id/StatusBtn"
-        android:layout_alignTop="@+id/DeliverBtn"
-        android:layout_centerHorizontal="true"
-        android:onClick="Status"
-        style="@style/ButtonCubScoutTheme"/>
+                <Button
+                    android:id="@+id/SalesModeBtn"
+                    style="@style/ButtonCubScoutTheme"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".35"
+                    android:onClick="Sales"
+                    android:text="Ordering" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Past Sales"
-        android:id="@+id/PastBtn"
-        android:layout_alignTop="@+id/StatusBtn"
-        android:layout_alignRight="@+id/ViewProductsBtn"
-        android:layout_alignEnd="@+id/ViewProductsBtn"
-        android:onClick="Past"
-        style="@style/ButtonCubScoutTheme"/>
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".1" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Logout"
-        android:id="@+id/LogoutBtn"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:onClick="Log"
-        style="@style/ButtonCubScoutTheme"/>
-</RelativeLayout>
+                <Button
+                    android:id="@+id/DonateBtn"
+                    style="@style/ButtonCubScoutTheme"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".35"
+                    android:onClick="Donation"
+                    android:text="Donations" />
+
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".1" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="10dp">
+
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".1" />
+
+                <Button
+                    android:id="@+id/DeliverBtn"
+                    style="@style/ButtonCubScoutTheme"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".35"
+                    android:onClick="Delivery"
+                    android:text="Delivery Mode" />
+
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".1" />
+
+                <Button
+                    android:id="@+id/PastBtn"
+                    style="@style/ButtonCubScoutTheme"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".35"
+                    android:onClick="Past"
+                    android:text="Past Sales" />
+
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".1" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="10dp">
+
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".1" />
+
+                <Button
+                    android:id="@+id/GoalBtn"
+                    style="@style/ButtonCubScoutTheme"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".35"
+                    android:onClick="Goal"
+                    android:text="Goals" />
+
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".1" />
+
+                <Button
+                    android:id="@+id/StatusBtn"
+                    style="@style/ButtonCubScoutTheme"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".3"
+                    android:onClick="Status"
+                    android:text="Status" />
+
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".1" />
+            </TableRow>
+        </TableLayout>
+
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="50dp">
+
+            <Button
+                android:id="@+id/LogoutBtn"
+                style="@style/ButtonCubScoutTheme"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="Log"
+                android:text="Logout" />
+        </TableRow>
+
+    </LinearLayout>
+</ScrollView>
