--- a/PopcornApp/app/src/main/res/layout/activity_login.xml
+++ b/PopcornApp/app/src/main/res/layout/activity_login.xml
@@ -72,7 +72,8 @@
             android:textColor="@color/TextColor"
             android:gravity="center_horizontal"
             android:paddingBottom="30dp"
-            android:id="@+id/textView23" />
+            android:id="@+id/textView23"
+            android:textSize="16dp" />
 
     </LinearLayout>
 </ScrollView>
